--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "이다솜"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : # path of avatar image, e.g. "/assets/images/dfgbdbhfd.png"
   bio              : "수학교사"
   location         : "대한민국, 용인"
   email            : "lovely2ds@naver.com"
