--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ url                      : "https://dlektha120.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : "dlektha120/dlektha120.github.io"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/dfgbdbhd.png"
+logo                     : "/assets/images/dfgbdbhd.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -95,7 +95,7 @@ analytics:
 # Site Author
 author:
   name             : "이다솜"
-  avatar           : # path of avatar image, e.g. "/assets/images/dfgbdbhfd.png"
+  avatar           : "/assets/images/dfgbdbhfd.png"
   bio              : "수학교사"
   location         : "대한민국, 용인"
   email            : "lovely2ds@naver.com"
