--- a/_config.yml
+++ b/_config.yml
@@ -96,7 +96,7 @@ analytics:
 author:
   name             : "이다솜"
   avatar           : "/assets/images/아바타.png"
-  bio              : "수학교사"
+  bio              : "HAFS 16"
   location         : "대한민국, 용인"
   email            : "lovely2ds@naver.com"
   links:
